# GLUTdoZero

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
cmake/: FindLib3ds.cmake
lib/gui_glut/: OpenTextures.cpp  OpenTextures.h  extra.cpp  extra.h  gui.cpp  gui.h
lib/utility/: Camera.cpp  Camera.h  CameraDistante.cpp  CameraDistante.h  CameraJogo.cpp  CameraJogo.h  Desenha.cpp  Desenha.h  Vetor3D.cpp  Vetor3D.h  model3ds.cpp  model3ds.h
